style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');


body {
    font-family: 'Poppins', sans-serif;
}


.navbar-nav 
.cart-badge {
    position: absolute;
    top: 10;
    right: 10;
    background-color: #008cff;
    color: white;
    height: 30px;
    width: 30px;
    padding-top: 2px;
    text-align: center;
    border-radius: 50%;
    /*padding: 10px 12px;
    *//*border-radius: 50%;
    /*margin-top: 2px;
    */;
}

#bor{
    border: none;
}

.navbar-nav .cart-total {
    margin-left: 50px;
}



.product-card img {
    width: 100%;
    height: 300px;
    object-fit: cover;
    border-radius: 8px 8px 0px 0px;
    -webkit-border-radius: 8px 8px 0px 0px;
    -moz-border-radius: 8px 8px 0px 0px;
    -ms-border-radius: 8px 8px 0px 0px;
    -o-border-radius: 8px 8px 0px 0px;
}

.product-card .card-body {
    padding: 15px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.product-card .card-title {
    font-size: 1rem;
    font-weight: 500;
    margin-bottom: 5px;
    color: #141414;
}

.product-card .card-text {
    font-size: 1.2rem;
    margin-bottom: 10px;
}

.cart-container {
    margin-top: 50px;
}

.cart-container h2 {
    margin-bottom: 30px;
}

.cart-container .table {
    width: 100%;
}

.cart-container .table th,
.cart-container .table td {
    border: 1px solid #ddd;
    padding: 10px;
}

.cart-container .table th {
    background-color: #ddd;
}

.cart-container .table .actions {
    width: 100px;
}

.cart-container .table .actions button {
    width: 100%;
}

.cart{
    border: 2px solid greenyellow;
    border-radius: 50px;
    background-color: black;
    color: white;
}








.button {
    display: inline-block;
    background-color: black;
    color: white;
    border: none;
    padding: 10px 20px;
    cursor: pointer;
    width: 100%;
    border-radius: 3px;
    transition: ease-in-out 0.3s;
    margin: 10px 0;
    margin-top: auto;

}

.button:hover {
    background-color: #00ce7f;
    color: white;
    transition: ease-in-out 0.3s;
    -webkit-transition: ease-in-out 0.3s;
    -moz-transition: ease-in-out 0.3s;
    -ms-transition: ease-in-out 0.3s;
    -o-transition: ease-in-out 0.3s;

}

.button.selected {
    background-color: #00dd88;
}

.button-submit {
    background-color: #000000;
    color: white;
    border: none;
    border-radius: 5px;
    height: 50px;
    transition: ease-in-out 0.3s;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
}

.button-submit:hover {
    background-color: #00dd88;
    color: white;
    border: none;
    border-radius: 5px;
    height: 50px;
    transition: ease-in-out 0.3s;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
}

.card {
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
    transition: ease-in-out 0.4s;
    border: none;
}

.card:hover {
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    transition: ease-in-out 0.4s;
    -webkit-transition: ease-in-out 0.4s;
    -moz-transition: ease-in-out 0.4s;
    -ms-transition: ease-in-out 0.4s;
    -o-transition: ease-in-out 0.4s;
}

.form-control:focus,
.form-select-sm:focus {
    color: #ffffff;
    box-shadow: none;
    border-color: #6e34f4;
    box-shadow: 0 0px 5.5px #e3d7ff;
    transition: ease-in-out 0.2s;
    -webkit-transition: ease-in-out 0.2s;
    -moz-transition: ease-in-out 0.2s;
    -ms-transition: ease-in-out 0.2s;
    -o-transition: ease-in-out 0.2s;
}


.custom-button {
    background-color: black;
    color: white;
    border: none;
    padding: 10px 20px;
    margin-right: 10px;
    cursor: pointer;
    width: 100%;
    border-radius: 3px;
    transition: ease-in-out 0.3s;
}

.custom-button:hover {
    background-color: #00dd88;
    color: white;
    border: none;
    padding: 10px 20px;
    margin-right: 10px;
    cursor: pointer;
    width: 100%;
    border-radius: 3px;
    transition: ease-in-out 0.3s;
    -webkit-transition: ease-in-out 0.3s;
    -moz-transition: ease-in-out 0.3s;
    -ms-transition: ease-in-out 0.3s;
    -o-transition: ease-in-out 0.3s;
}

.custom-button.selected {
    background-color: #00dd88;
    color: white;

}

